Fixed up some of the verbiage in aim 2. Recompiled. Added extra bib

--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -1840,6 +1840,23 @@
   file = {/home/andrew/Zotero/storage/L2KZ8BLX/William Hoff et al_1998_Three-dimensional determination of femoral-tibial contact positions under in.pdf}
 }
 
+@inproceedings{holkGPUProgrammingRust2013,
+  title = {{{GPU Programming}} in {{Rust}}: {{Implementing High-Level Abstractions}} in a {{Systems-Level Language}}},
+  shorttitle = {{{GPU Programming}} in {{Rust}}},
+  booktitle = {2013 {{IEEE International Symposium}} on {{Parallel}} \& {{Distributed Processing}}, {{Workshops}} and {{Phd Forum}}},
+  author = {Holk, Eric and Pathirage, Milinda and Chauhan, Arun and Lumsdaine, Andrew and Matsakis, Nicholas D.},
+  year = {2013},
+  month = may,
+  pages = {315--324},
+  publisher = {{IEEE}},
+  address = {{Cambridge, MA, USA}},
+  doi = {10.1109/IPDPSW.2013.173},
+  abstract = {Graphics processing units (GPUs) have the potential to greatly accelerate many applications, yet programming models remain too low level. Many language-based solutions to date have addressed this problem by creating embedded domain-specific languages that compile to CUDA or OpenCL. These targets are meant for human programmers and thus are less than ideal compilation targets. LLVM recently gained a compilation target for PTX, NVIDIA's low-level virtual instruction set for GPUs. This lower-level representation is more expressive than CUDA and OpenCL, making it easier to support advanced language features such as abstract data types or even certain closures. We demonstrate the effectiveness of this approach by extending the Rust programming language with support for GPU kernels. At the most basic level, our extensions provide functionality that is similar to that of CUDA. However, our approach seamlessly integrates with many of Rust's features, making it easy to build a library of ergonomic abstractions for data parallel computing. This approach provides the expressiveness of a high level GPU language like Copperhead or Accelerate, yet also provides the programmer the power needed to create new abstractions when those we have provided are insufficient.},
+  isbn = {978-0-7695-4979-8},
+  langid = {english},
+  file = {/home/andrew/Zotero/storage/7RAYPVKJ/Holk et al. - 2013 - GPU Programming in Rust Implementing High-Level A.pdf;/home/andrew/Zotero/storage/W5YBJIGH/holk2013.pdf.pdf}
+}
+
 @article{hoshinoEffectDistalFemur2012,
   title = {The Effect of Distal Femur Bony Morphology on in Vivo Knee Translational and Rotational Kinematics},
   author = {Hoshino, Yuichi and Wang, Joon Ho and Lorenz, Stephan and Fu, Freddie H. and Tashman, Scott},
