--- a/src/1-Intro/1-1_computer-vision-primer/1-1_computer-vision-primer.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/1-1_computer-vision-primer.tex
@@ -1,3 +1,5 @@
+In order to more fully understand and appreciate the process of extracting the 3D kinematics of total knee arthroplasty components from single-plane digital images, we must first explore the basics of computer vision. Specifically, the elements of image formation of and object projection.
+
 \subsection{Geometric Transformations}
 \label{sec:geometric-transformations}
 \input{src/1-Intro/1-1_computer-vision-primer/geometric-transformations.tex}
